# TaoBaoAutoSdk

./: .gitignore  ApiDomain_8h.html  ApiDomain_8h__dep__incl.map  ApiDomain_8h__dep__incl.md5  ApiDomain_8h__incl.map  ApiDomain_8h__incl.md5  ApiDomain_8h_source.html  ApiField_8cpp.html  ApiField_8cpp__incl.map  ApiField_8cpp__incl.md5  ApiField_8cpp_a0350a75f88c09c1baf25e1bfe1d8e5c8_cgraph.map  ApiField_8cpp_aa2d132f5e616b209add9cbad4f9c8812_cgraph.map  ApiField_8h.html  ApiField_8h__dep__incl.map  ApiField_8h__dep__incl.md5  ApiField_8h__incl.map  ApiField_8h__incl.md5  ApiField_8h_source.html  ApiRequest_8h.html  ApiRequest_8h__dep__incl.map  ApiRequest_8h__dep__incl.md5  ApiRequest_8h__incl.map  ApiRequest_8h__incl.md5  ApiRequest_8h_source.html  ApiResponse_8h.html  ApiResponse_8h__dep__incl.map  ApiResponse_8h__dep__incl.md5  ApiResponse_8h__incl.map  ApiResponse_8h__incl.md5  ApiResponse_8h_source.html  BaseObject_8cpp.html  BaseObject_8cpp__incl.map  BaseObject_8cpp__incl.md5  BaseObject_8h.html  BaseObject_8h__dep__incl.map  BaseObject_8h__dep__incl.md5  BaseObject_8h__incl.map  BaseObject_8h__incl.md5  BaseObject_8h_source.html  CMakeCCompilerId_8c.html  (+518 more)
.kdev4/: TaoBaoAutoSdk.kdev4  _custom.kdev4
TaoBaoAutoSdk-doc/: ApiDomain_8h.html  ApiDomain_8h__dep__incl.md5  ApiDomain_8h__incl.md5  ApiDomain_8h_source.html  ApiField_8cpp.html  ApiField_8cpp__incl.map  ApiField_8cpp__incl.md5  ApiField_8h.html  ApiField_8h__dep__incl.md5  ApiField_8h__incl.map  ApiField_8h__incl.md5  ApiField_8h_a0350a75f88c09c1baf25e1bfe1d8e5c8_cgraph.md5  ApiField_8h_aa2d132f5e616b209add9cbad4f9c8812_cgraph.md5  ApiField_8h_source.html  ApiRequest_8h.html  ApiRequest_8h__dep__incl.map  ApiRequest_8h__incl.md5  (+232 more)
src/: CMakeLists.txt  SdkConstants.cpp  main.cpp
src/domain/: BaseObject.cpp
src/generator/: CppQtSdkGenerator.cpp  SdkGenerator.cpp
src/mapper/: CppQtTypeMapper.cpp
src/parser/: MetaSdkParser.cpp
src/util/: StringKit.cpp
(+95 files in other folders)
